--- a/sample2/package.json
+++ b/sample2/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "redux",
+  "name": "sample2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
+  "dependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +21,11 @@
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "json-loader": "^0.5.4",
     "react": "^15.1.0",
-    "react-redux": "^4.4.5"
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
